# text-summerizer-project

./: Dockerfile  LICENSE  README.md  Text_Summarizer_Colab.ipynb  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  submission_info.txt  template.py
config/: config.yaml
frontend/: app.js  index.html  style.css
research/: trials.ipynb
src/textsummarizer/components/: analysis_service.py  nlp_preprocessing.py
src/textsummarizer/config/: configuration.py
src/textsummarizer/entity/: __init__.py
src/textsummarizer/logging/: __init__.py
src/textsummarizer/pipeline/: prediction.py
src/textsummarizer/utils/: common.py
