[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textSummarizer"
version = "0.0.0"
description = "A small package for NLP app"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "pranjals2004", email = "sharmapranjal80133@gmail.com"}
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
